--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -164,6 +164,7 @@
 
 <!-- begin::global scripts -->
 <script src="{% static 'vendors/bundle.js' %}"></script>
+
 <!-- end::global scripts -->
 
 <!-- begin::custom scripts -->
@@ -191,6 +192,7 @@
 <!-- // -->
 <script src="{% static 'assets/Datepiker/persian-date.js' %}"></script>
 <script src="{% static 'assets/Datepiker/persian-datepicker.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 
