--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -144,7 +144,7 @@
                                       </select></td>
                                       <td contenteditable="true" class="editable-cell btc vahed selectable1" data-vahed="{{c.machine.assetVahed}}">{{c.vahed}}</td>
 
-                                      <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.nomre}}</td>
+                                      <td contenteditable="true" class="editable-cell btc nomre selectable1" data-tab="">{{c.nomre}}</td>
                                       <td contenteditable="true" class=" editable-cell2 btc speed selectable1" data-nomre={{c.nomre}}>{{c.speed}}</td>
 
 
