--- a/tiny_mrp/mrp/templates/mrp/tolid/monthly_brief.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/monthly_brief.html
@@ -17,6 +17,8 @@
                         <option >انتخاب سال</option>
                         <option {% if year == 1402 %} selected {% endif %} value="1402">1402</option>
                         <option {% if year == 1403 %} selected {% endif %} value="1403">1403</option>
+                        <option {% if year == 1404 %} selected {% endif %} value="1404">1404</option>
+
 
                       </select>
 
