--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -157,8 +157,15 @@
                                       <td contenteditable="true"  class='editable-cell  waste selectable1'></td>
 
                                     </tr>
+                                    
                                     {% endif %}
                                     {% endfor %}
+                                    <tr>
+                                      <td colspan="8"></td>
+                                      <td>جمع ضایعات</td>
+                                      <td class="sum-waste"></td>
+                                     
+                                  </tr>
                                     <!-- Add more rows as needed -->
                                   </tbody>
                                 </table>
