--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -298,8 +298,8 @@
       </a>
     </li>
     <li>
-      <a href="{% url 'daily_tolid_with_chart' %}">
-        <span>نمودار میله ای روزانه </span>
+      <a href="{% url 'view_overal_code_production' %}">
+        <span>گزارش تفکیکی تولید بر اساس کد رنگ</span>
 
       </a>
     </li>
