--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderCreate.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'create_morder'   %}" class="js-morder-create-form" autocomplete="off">
+<form method="post" action="{% url 'create_morder'   %}" class="js-morder-create-form" autocomplete="off" id="moForm">
     {% csrf_token %}
     <div class="modal-header " >
         <h5 class="modal-title" id="newOrderModalLabel">Create New Manufacturing Order</h5>
