--- a/tiny_mrp/mrp/templates/mrp/users/partialUserForm.html
+++ b/tiny_mrp/mrp/templates/mrp/users/partialUserForm.html
@@ -9,7 +9,7 @@
 
 
     {% else %}
-    <img src="{% static 'img/_blank_profile.png' %}"  width="128" height="128" class="js-upload-photos" />
+    <img src=""  width="128" height="128" class="js-upload-photos" />
     {% endif %}
 
 
