--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
@@ -195,14 +195,14 @@
             autohidemode: true  // Hide scrollbar when not scrolling
         });
         // Dummy users list
-        let users1000 = [
-            { key: "arzande", value: "arzande" },
-            { key: "ezami", value: "ezami" },
+        // let users1000 = [
+        //     { key: "arzande", value: "arzande" },
+        //     { key: "ezami", value: "ezami" },
 
-            { key: "torabi", value: "torabi" },
-            { key: "abedi", value: "abedi" },
+        //     { key: "torabi", value: "torabi" },
+        //     { key: "abedi", value: "abedi" },
             
-        ];
+        // ];
 
         // Initialize Tribute.js
         let tribute = new Tribute({
