--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -338,6 +338,9 @@
 
 <script src="{% static 'project/purchaselist.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/tributejs@5.1.3/dist/tribute.min.js"></script>
+<script>
+    var users1000 = {{ json_dict_list|safe }};
+</script>
 
 
 
